tests/snapshots/cli__add_entry_artefact_stdout.snap
---
source: tests/cli.rs
assertion_line: 44
expression: out.stdout
---
Added meta/svc → https://github.com/org/svc.git @ main [artefact replace]
