tests/snapshots/cli__add_entry_stdout.snap
---
source: tests/cli.rs
assertion_line: 22
expression: out.stdout
---
Added libs/core → https://github.com/org/core.git @ main
