tests/snapshots/cli__clone_artefact_local_stdout.snap
---
source: tests/cli.rs
expression: redact_shas(&out.stdout)
---
Cloning missing repos...
  ok    meta/app (artefact [sha])
