tests/snapshots/cli__clone_artefact_no_data_stdout.snap
---
source: tests/cli.rs
expression: out.stdout
---
Cloning missing repos...
  skip  meta/app (no artefact data)
