tests/snapshots/cli__clone_readonly_stdout.snap
---
source: tests/cli.rs
assertion_line: 139
expression: out.stdout
---
Cloning missing repos...
  ok    libs/rolib
