tests/snapshots/cli__clone_readwrite_stdout.snap
---
source: tests/cli.rs
assertion_line: 119
expression: out.stdout
---
Cloning missing repos...
  ok    libs/mylib
