tests/snapshots/cli__clone_skip_existing_stdout.snap
---
source: tests/cli.rs
expression: out2.stdout
---
Cloning missing repos...
  skip  libs/mylib (already exists)
