tests/snapshots/cli__fetch_artefact_local_stdout.snap
---
source: tests/cli.rs
expression: redact_shas(&out.stdout)
---
Fetching...
  ok    meta/app (artefact [sha])
