tests/snapshots/cli__fetch_git_cloned_stdout.snap
---
source: tests/cli.rs
assertion_line: 335
expression: out.stdout
---
Fetching...
  ok    libs/mylib
