tests/snapshots/cli__fetch_git_not_cloned_stdout.snap
---
source: tests/cli.rs
assertion_line: 485
expression: out.stdout
---
Fetching...
  ok    libs/mylib
