tests/snapshots/cli__multiple_repos_mixed_stdout.snap
---
source: tests/cli.rs
expression: redact_shas(&out.stdout)
---
Cloning missing repos...
  ok    libs/ro-lib
  ok    libs/rw-lib
  ok    meta/art (artefact [sha])
