tests/snapshots/cli__pull_artefact_local_stdout.snap
---
source: tests/cli.rs
expression: redact_shas(&out2.stdout)
---
Pulling latest changes...
  ok    meta/app (artefact [sha])
